# rusha_django_project

./: .env.sh  .gitignore  Dockerfile  README.md  cron_job.py  dequeue_new_applications.py  docker-compose-dev.yml  docker-compose-mssql-dev.yml  installer.sh  manage.py  mssql.yml  pyproject.toml  rusha_config.yml
ansible/: hosts.ini  installation_playbook.yml  rusha_django_playbook.yml  rushiwa_django_playbook.yml  software-playbook.yml
cron_job/helpers/: create_git_repo.py  nginx_static_files_with_proxy_configuration.py  post_receive_templates.py  queries.py
cron_jobs/: application.py  create_git_repo.py  create_nginx_conf.py  dequeue_new_applications.py  nginx_static_files_with_proxy_configuration.py  post_receive_templates.py  queries.py
cron_jobs/helpers/: application.py  create_git_repo.py  create_nginx_conf.py  queries.py
local/: build.sh
rusha_applications_api/: admin.py  apps.py  models.py  views.py
rusha_applications_api/helpers/: generate_application_path.py  generate_domain_name.py  get_host_name.py
rusha_applications_api/migrations/: 0001_initial.py  0002_application_application_host_and_more.py  0003_rename_applocation_domain_application_application_domain.py  0004_alter_application_application_domain_and_more.py  0005_alter_application_application_path_and_more.py  0006_remove_application_application_domain_and_more.py  0007_application_proxy_host_name_and_or_port.py  (+2 more)
rusha_django/: settings.py  urls.py  wsgi.py
rushiwa_applications_api/: apps.py  models.py  serializers.py  urls.py
scripts/: create_git_repo.py  post_receive_templates.py
(+12 files in other folders)
